--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,5 +25,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'SK'
 - !lcsh 'Camping'
+- GITenberg
 title: Camps and Trails
 url: http://www.gutenberg.org/ebooks/34671
